--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,14 @@
                 <version>7.10.2</version>
                 <scope>test</scope>
             </dependency>
-
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
+            <version>4.25.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
             <version>4.25.0</version>
         </dependency>
     </dependencies>
